fix. баллы по центру вместе с фоткой и порядковым номером, больше высота Item on mobile

--- a/src/widgets/ratingTable/ui/ratingTable.module.scss
+++ b/src/widgets/ratingTable/ui/ratingTable.module.scss
@@ -288,7 +288,7 @@
 
         .row {
             grid-template-columns: 32px 72px 1fr 70px;  
-            padding: 10px;
+            padding: 16px 10px;
 
             .place {
                 display: flex;
@@ -335,6 +335,12 @@
             }
 
             .coins {
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                align-self: flex-start;
+                height: 52px;
+                width: 100%;
                 font-size: 20px;
             }
         }
